<resources>
    <string name="app_name">CoursEnLigne</string>
    <string name="label_email">Email</string>
    <string name="label_mdp">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="connexion">Connexion</string>
    <string name="deconnexion">déconnexion</string>
    <string name="erreur_email">Email invalide</string>
    <string name="erreur_mdp">Mot de passe trop court</string>
    <string name="erreur_mdp_incorrect">Mot de passe incorrect</string>
    <string name="erreur_champs_obligatoire">Ce champs est obligatoire</string>
    <string name="consulter_cours">Cours</string>
    <string name="consulter_qcm">QCM</string>
    <string name="ajouter_cours">Ajouter cours</string>
    <string name="ajouter_qcm">Ajouter QCM</string>
    <string name="title_activity_qcm">QcmActivity</string>
    <string name="home">Home</string>
    <string name="confirmer_mdp">Confirmer mot de passe</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="valider">Valider</string>
    <string name="inscrption">Inscription</string>
    <string name="math">Mathématiques</string>
    <string name="info">Informatique</string>
    <string name="bio">Biologie</string>
    <string name="chimie">Chimie</string>
    <string name="physique">Physique</string>
    <string name="qcm_a_faire">QCM</string>
    <string name="nom_cours">Nom cours</string>
    <string name="ajouter_cours_hint">Lien (youtube ou page pdf)</string>
    <string name="server_ip">Adresse IP serveur</string>
    <string-array name="choix_annee">
        <item>L1</item>
        <item>L2</item>
        <item>L3</item>
        <item>M1</item>
        <item>M2</item>
    </string-array>
    <string-array name="choix_lien">
        <item>video</item>
        <item>pdf</item>
    </string-array>
    <string-array name="choix_nb_reponse">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="array_vide"></string-array>


</resources>
