<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inscription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="progmobile.coursenligne.InscriptionActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <EditText

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                />
            <EditText

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_mdp"
                android:inputType="textPassword"/>
            <EditText

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/confirmer_mdp"
                android:inputType="textPassword"/>
            <EditText

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prenom"
                android:inputType="textPassword"/>
            <EditText

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                android:inputType="textPassword"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Professeur"/>
                <CheckBox
                    android:id="@+id/inscription_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:layout_below="@+id/scrollView2"
        android:layout_alignRight="@+id/scrollView2"
        android:layout_alignEnd="@+id/scrollView2"
        android:id="@+id/button2"
        android:onClick="validerInscription"/>
</RelativeLayout>
