<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="progmobile.coursenligne.HomeActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/math"
                android:id="@+id/home_math"
                android:onClick="consulterMath"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/info"
                android:id="@+id/home_info"
                android:onClick="consulterInformatique"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/bio"
                android:id="@+id/bio"
                android:onClick="consulterBio"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/home_physique"
                android:text="@string/physique"

                android:onClick="consulterPhysique"/>








        </TableLayout>
    </ScrollView>




</RelativeLayout>
